remove margem lateral para grid 12 colunas

--- a/componentes/Grid12Col/Grid12Col.module.css
+++ b/componentes/Grid12Col/Grid12Col.module.css
@@ -1,5 +1,5 @@
 .GridContainer {
-    margin: 45px 125px;
+    margin: 45px 0;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: max-content;
@@ -103,12 +103,6 @@
     grid-column: 9/13;
 }
 
-@media screen and (max-width: 1440px) {
-    .GridContainer {
-        margin: 45px 80px;
-    }
-}
-
 @media screen and (max-width: 1024px) {
     /* Seleciona todos os cards */
     .GridItem6-6:nth-child(n) {
@@ -139,10 +133,6 @@
 }
 
 @media screen and (max-width: 768px) {
-    .GridContainer {
-        margin: 45px 40px;
-    }
-
     .GridItem5-7:nth-child(n),
     .GridItem4-8:nth-child(n),
     .GridItem3-9:nth-child(n) {
@@ -151,11 +141,6 @@
 }
 
 @media screen and (max-width: 375px) {
-    .GridContainer {
-        margin: 45px 16px;
-        gap: 16px;
-    }
-
     .GridItem4-4-4:nth-child(n),
     .GridItem2-5-5:nth-child(n),
     .GridItem3-3-3-3:nth-child(n),
