--- a/componentes/GraficoInfo/GraficoInfo.module.css
+++ b/componentes/GraficoInfo/GraficoInfo.module.css
@@ -10,7 +10,7 @@
     grid-template-columns: 2fr 1fr;
     column-gap: 20px;
     row-gap: 10px;
-    padding: 30px 80px;
+    padding: 30px 0;
 }
 
 .TituloContainer {
@@ -70,17 +70,13 @@
 .Link {
     color: #4294D8;
     font-size: 14px;
-    line-height:  150%;
+    line-height: 150%;
     justify-self: flex-end;
     height: fit-content;
 }
 
 /* XLARGE */
 @media screen and (min-width: 1920px) {
-    .GraficoInfo {
-        padding: 30px 125px;
-    }
-
     .Titulo {
         font-size: 32px;
     }
@@ -89,7 +85,9 @@
         font-size: 24px;
     }
 
-    .InfoSimbolo, .Fonte, .Link {
+    .InfoSimbolo,
+    .Fonte,
+    .Link {
         font-size: 16px;
     }
 }
@@ -100,25 +98,19 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
-        padding: 30px 40px;
     }
 
     .Titulo {
         font-size: 16px;
     }
 
-    .Descricao, .InfoSimbolo {
+    .Descricao,
+    .InfoSimbolo {
         font-size: 14px;
     }
 
-    .Fonte, .Link {
+    .Fonte,
+    .Link {
         font-size: 12px;
-    }
-}
-
-/* SMALL */
-@media(max-width: 360px) {
-    .GraficoInfo {
-        padding: 30px 16px;
     }
 }
