--- a/componentes/GraficoInfo/GraficoInfo.module.css
+++ b/componentes/GraficoInfo/GraficoInfo.module.css
@@ -20,7 +20,7 @@
 
 .Titulo {
     margin: 0;
-    font-size: 24px;
+    font-size: 32px;
     line-height: 130%;
 }
 
@@ -35,7 +35,7 @@
 
 .InfoSimbolo {
     color: #9ba4a5;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 150%;
     font-weight: bolder;
 }
@@ -57,31 +57,31 @@
 }
 
 .Descricao {
-    font-size: 16px;
+    font-size: 24px;
     line-height: 150%;
 }
 
 .Fonte {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 150%;
 }
 
 .Link {
     color: #4294D8;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 150%;
     justify-self: flex-end;
     height: fit-content;
 }
 
-/* XLARGE */
-@media screen and (min-width: 1920px) {
+/* LARGE */
+@media(max-width: 1440px) {
     .Titulo {
-        font-size: 32px;
+        font-size: 24px;
     }
 
     .Descricao {
-        font-size: 24px;
+        font-size: 18px;
     }
 
     .InfoSimbolo,
@@ -95,6 +95,16 @@
 @media(max-width: 1366px) {
     .Titulo {
         font-size: 18px;
+    }
+
+    .Descricao {
+        font-size: 16px;
+    }
+
+    .InfoSimbolo,
+    .Fonte,
+    .Link {
+        font-size: 14px;
     }
 }
 
