--- a/componentes/Modal/Modal.module.css
+++ b/componentes/Modal/Modal.module.css
@@ -5,6 +5,7 @@
     position: fixed;
     background-color: #fff;
     margin-left: auto;
+    box-shadow: -10px 0px 10px -5px rgba(0, 0, 0, 0.2);
 }
 .ModalExit{
     color:#fff;
