--- a/componentes/Parcerias/Parcerias.module.css
+++ b/componentes/Parcerias/Parcerias.module.css
@@ -7,6 +7,10 @@
   padding: 64px;
 }
 
+.container_parceiros_descritivo {
+  flex-direction: column;
+}
+
 .themeColorIP {
   background: #0b404a;
   color: #ffff;
@@ -26,6 +30,15 @@
   line-height: 130%;
   letter-spacing: -0.02em;
   width: 30%;
+}
+
+.parceirosLabelDescritivo {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 130%;
+  letter-spacing: -0.02em;
 }
 
 .tituloParceiro {
@@ -64,6 +77,8 @@
 
 .gridContainerDescritivo {
   justify-content: center;
+  gap: 0;
+  justify-content: space-between;
 }
 
 .info_parceiro {
