--- a/componentes/Login/Login.module.css
+++ b/componentes/Login/Login.module.css
@@ -117,6 +117,34 @@
     text-decoration: none;
 }
 
+.InputSenhaContainer{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.BotaoMostraSenha{
+    position: absolute;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #fff;
+    font-size: xx-large;
+}
+
+.BotaoMostraSenha:hover{
+    cursor: pointer;
+}
+
+.IconeMostraSenha{
+    height: 18px;
+    width: auto;
+    filter: invert(90%) sepia(15%) saturate(253%) hue-rotate(161deg) brightness(79%) contrast(84%);
+}
+
 .ColorIP, .White {
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #1D856C;
