--- a/componentes/Login/Login.module.css
+++ b/componentes/Login/Login.module.css
@@ -14,6 +14,7 @@
 }
 
 .LoginCampo{
+    font-family: 'Inter';
     width: 100%;
     height: 80px;
     display: flex;
@@ -173,7 +174,7 @@
     
     .LoginCampo{
         height: 50px;
-        padding: 5px;
+        padding: 15px;
     }
 }
 
@@ -184,6 +185,6 @@
     
     .LoginCampo{
         height: 50px;
-        padding: 5px;
+        padding: 15px;
     }
 }
