--- a/componentes/PreviewArtigo/PreviewArtigo.module.css
+++ b/componentes/PreviewArtigo/PreviewArtigo.module.css
@@ -3,8 +3,7 @@
 .PreviewArtigoContainer{
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 0px 80px 30px 80px;
     margin-top: 15px;
     height: fit-content;
     gap: 16px;
@@ -22,7 +21,6 @@
     margin-bottom: 10px;
     width: fit-content;
 }
-
 .PreviewArtigoTag{
     display: flex;
     justify-content: center;
@@ -39,7 +37,6 @@
     height: 32px;
     white-space: nowrap;
 }
-
 .PreviewArtigoTitulo{
     font-family: 'Inter';
     font-style: normal;
@@ -51,7 +48,6 @@
     margin-top: 10px;
     margin-bottom: 18px;
 }
-
 .PreviewArtigoTexto{
     font-family: 'Inter';
     font-style: normal;
@@ -61,7 +57,6 @@
     text-align: left;
     width: 90%;
 }
-
 .PreviewArtigoAutor{
     display: flex;
     flex-direction: row;
@@ -72,7 +67,6 @@
     color: #1F1F1F;
     align-items: center;
 }
-
 .PreviewArtigoData{
     font-family: 'Inter';
     font-style: normal;
@@ -80,15 +74,11 @@
     font-size: 12px;
     color: #606E78;
 }
-
-
 .PreviewArtigoAutorAvatar{
     margin-right: 10px;
     border-radius: 100%;
     background-color: #2EA6BC;
 }
-
-
 .PreviewArtigoImage{
     background-color: #606E78;
     border-radius: 20px;
@@ -96,18 +86,31 @@
     height: 140px;
     object-fit: cover;
 }
-
 .PreviewArtigoLine{
     border-bottom: solid 1px #D2D2D2;
     padding-bottom: 66px;
 }
 
-@media screen and (max-width: 1023px){
+
+/* XSMALL */
+@media screen and (max-width: 374px) {
     .PreviewArtigoContainer{
+        padding: 30px 16px 30px 16px;
+    }
+}
+/* SMALL */
+@media screen and (min-width: 375px)and (max-width: 767px) {
+    .PreviewArtigoContainer{
+        padding: 30px 40px 30px 40px;
+    }
+}
+
+@media screen and (max-width: 1023px){
+    /* .PreviewArtigoContainer{
         padding-left: 16px;
         padding-right: 16px;
         padding-top: 50px;
-    }
+    } */
     #PreviewArtigoConteinerID{ order: 1;}
     #PreviewArtigoAutorID{ order: 2;}
     #PreviewArtigoTagID{ order: 3;}
