--- a/componentes/ScoreCard/ScoreCard.module.css
+++ b/componentes/ScoreCard/ScoreCard.module.css
@@ -6,8 +6,8 @@
     font-size: 14px;
     line-height: 150%;
     text-align: center;
-    width: fit-content;
-    padding: 25px 10px;
+    width: 250px;
+    padding: 25px 0px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
