--- a/componentes/Modal/Modal.module.css
+++ b/componentes/Modal/Modal.module.css
@@ -7,6 +7,7 @@
     background-color: #fff;
     margin-left: auto;
     box-shadow: -10px 0px 10px -5px rgba(0, 0, 0, 0.2);
+    overflow-y: scroll;
 }
 .ModalExit{
     color:#fff;
