--- a/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
+++ b/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
@@ -30,8 +30,7 @@
     display: flex;
     gap: 15px;
     width: 100%;
-    padding: 0 30px 0 30px;
-    margin : 30px 80px 0px 45px;
+    justify-content: center;
 }
 .SearchBar{
     background: #EFF5F9;
@@ -43,7 +42,7 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 150%;
-    width: 70%;
+    width: 78%;
 }
 .SearchBar:focus { 
     outline: none !important;
