--- a/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
+++ b/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
@@ -62,6 +62,8 @@
     height: 100vh;
     z-index: 200;
     background-color: #1f1f1f95;
+    position: fixed;
+    top:0;
 }
 .cardFiltro{
     font-family: 'Inter';
