--- a/componentes/TabelaHiperDia/TabelaHiperDia.module.css
+++ b/componentes/TabelaHiperDia/TabelaHiperDia.module.css
@@ -7,7 +7,7 @@
     font-family: Inter;
     letter-spacing: -0.12px;
     text-transform: uppercase;
-  }
+}
 .cabecalho{
     background-color: #C9D2D8;
     border-radius: 10px;
@@ -22,5 +22,12 @@
 .colunaTitulo:last-child{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
+}
+.linha:first-child td{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.linha:last-child{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
