--- a/componentes/PreviewArtigo/PreviewArtigo.module.css
+++ b/componentes/PreviewArtigo/PreviewArtigo.module.css
@@ -13,6 +13,7 @@
 }
 .PreviewArtigoContainerInner{
     display: flex;
+    align-items: flex-start;
     flex-direction: row;
 }
 .PreviewArtigoContainerTituloTexto{
