--- a/componentes/Imagens/ImagensFull2.module.css
+++ b/componentes/Imagens/ImagensFull2.module.css
@@ -4,17 +4,15 @@
 
 .imageContainerBanner2{
   height: 600px;
-  width: 95%;
-  border-radius: 0px 25px 25px 0px;
-  object-fit: cover;
+  width: 100%;
+  border-radius: 21px;
+  object-fit:cover;
 }
 
 /* SMALL */
 @media screen and (max-width: 1023px) {
   .imageContainerBanner2{
-    height: 300px;
-    border-radius: 0px 15px 15px 0px;
-    margin-bottom: 25px;
+    height: 260px;
   }  
 }
 
@@ -22,7 +20,6 @@
 @media screen and (min-width: 1024px)and (max-width: 1400px) {
   .imageContainerBanner2{
     height: 500px;
-    border-radius: 0px 20px 20px 0px;
   }
 }
 
@@ -30,6 +27,5 @@
 @media screen and (min-width: 1920px) {
   .imageContainerBanner2{
     height: 900px;
-    border-radius: 0px 30px 30px 0px;
   }
 }
