--- a/componentes/TituloTexto/TituloTexto.module.css
+++ b/componentes/TituloTexto/TituloTexto.module.css
@@ -1,3 +1,37 @@
+.novoContainerTexto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    align-self: stretch;
+}
+
+.novoTitulo{
+    color: var(--grey-darkest, #1F1F1F);
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%; /* 72px */
+    letter-spacing: -1.2px;
+}
+
+.novoCorpoTexto{
+    color: var(--grey-darkest, #1F1F1F);
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 135%; /* 29.7px */
+    letter-spacing: -0.44px;
+}
+
+
 .containerTexto{
     background-color: #FFF;
     padding: 30px 80px 30px 80px;
