--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -34,8 +34,22 @@
   font-size: small;
   overflow-x: scroll;
   scrollbar-width: none;
-
 }
+.PanelSelectorContainerIP {
+  display: flex;
+  gap: 24px;
+  
+  min-width: 100%;
+  width: 100%;
+  height: 63px;
+  padding: 0 5%;
+
+  font-family: "Inter";
+  font-size: small;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
 .PanelSelectorTitles {
   display: flex;
   gap: 24px;
@@ -58,6 +72,11 @@
   background: none;
   height: 5px;
 }
+.PanelSelectorContainerIP::-webkit-scrollbar {
+  background: none;
+  height: 5px;
+}
+
 .PanelSelectorTitles::-webkit-scrollbar {
   background: none;
   height: 5px;
@@ -146,6 +165,11 @@
 .PanelSelectorComponents {
   padding: 0 9%;
 }
+
+.PanelSelectorComponentsIP {
+  padding: 0 6%;
+}
+
 
 @media(max-width: 639px){
   .PanelSelectorMain{
