--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -44,7 +44,7 @@
 .container_navbar {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 20px 90px 20px 55px;
     top: 0;
     margin: 0;
     font-family: 'Inter';
@@ -128,7 +128,7 @@
   .links_navbar {
     display: flex;
     list-style: none;
-    margin: 0;
+    margin: 0 0 0 15%;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -549,8 +549,7 @@
 
   .NavBarLogin{
     padding: 10px 10px;
-    margin-right: 30px;
-    margin-left: 15px;
+    margin-left: auto;
 
     font-family: 'Inter';
     font-style: normal;
