retira botao mobile cinza

--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -535,6 +535,9 @@
   .buttonMoblieWhiteSM{
     display: none;
   }
+  .buttonMoblieCinza {
+    display: none;
+  }
   
   .NavBarSearchConteinerMoblie{
     display: none;
