--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -63,6 +63,24 @@
     align-items: center;
     text-decoration: none;
 }
+.ButtonColorIconContainerTexto{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #2EB280;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    word-break: break-word;
+}
 .disable{
     background-color: rgba(96, 110, 120, 0.50);
     border: none;
@@ -93,12 +111,19 @@
     background-color: #1D856C;
     cursor: pointer;
 }
+.ButtonColorIconContainerTexto:hover{
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background-color: #1D856C;
+    cursor: pointer;
+}
 
 
 /* SMALL */
 @media(max-width: 780px) {
     .ButtonColorIconContainer{
         font-size: 0px;
+    }
+    .ButtonColorIconContainerTexto{
     }
     .ButtonColorIconContainer img{
         width: 16px;
