Adiciona prop de largura à imagem de título small

--- a/componentes/Imagens/ImagensFull2.module.css
+++ b/componentes/Imagens/ImagensFull2.module.css
@@ -4,7 +4,7 @@
 
 .imageContainerBanner2{
   /* height: 600px; */
-  width: 100%;
+  /* width: 100%; */
   border-radius: 21px;
   object-fit:cover;
 }
