--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -642,6 +642,10 @@
       border-radius: 50%;
       padding: 8px;
     }
+    
+    .buttonMoblieCinza {
+      display: block;
+    }
 
     .buttonMoblieColorAGP{
       display: block;
