--- a/componentes/Slider/Slider.module.css
+++ b/componentes/Slider/Slider.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #E5E5E5;
+    background-color: #e6ecf0;
     padding: 75px 100px 75px 100px;
     font-family: 'Inter';
     font-style: normal;
@@ -25,7 +25,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background: #1D856C;
+    background: #2EB280;
     padding: 15px;
     border: none;
     height: 64px;
@@ -33,7 +33,7 @@
 }
 .btnSlider:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: #ef8264;
+    background-color: #1D856C;
 }
 
 .cardSlider{
@@ -60,16 +60,17 @@
 }
 .chamadaSlider{
     display: block;
-    background: #1D856C;
+    background: #2EB280;
     border-radius: 100px;
     font-size: 15px;
     color: #FFFFFF;
     padding: 15px;
     width: fit-content;
+    text-decoration: unset;
 }
 .chamadaSlider:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: #ef8264;
+    background-color: #1D856C;
     color: #FFFFFF;
 }
 
