--- a/componentes/CardGridInternacoes/CardGridInternacoes.module.css
+++ b/componentes/CardGridInternacoes/CardGridInternacoes.module.css
@@ -2,7 +2,6 @@
     color: #9ba4a5;
     display: flex;
     justify-content: center;
-    /* align-items: left; */
     flex-direction: column;
     width: 100%;
     height: 100%;
@@ -10,48 +9,18 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    /* top-bottom, left-right */
     padding: 25px 55px;
-   
 }
 
 .Aux {
     gap: 20px;
 }
 
-.CardInfoTitulo {
-    margin-bottom: 8px;
-    white-space: normal;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.CardInfoTooltip {
-    font-family: 'Inter';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    text-align: center;
-}
-
-.CardInfoSymbol {
-    color: black;
-    margin-left: 5px;
-}
-
-.CardInfoSymbol:hover {
-    cursor: default;
-}
-
 .CardInfoIndicadorContainer {
     display: flex;
     gap: 10px;
     height: fit-content;
-    align-items: flex-end;
     flex-wrap: wrap;
-}
-
-.TipoC .CardInfoIndicadorContainer {
     flex-direction: column;
     align-items: flex-start;
 }
@@ -65,16 +34,10 @@
 .CardInfoIndicadorDescricao,
 .CardInfoDescricao {
     font-size: 14px;
-   
 }
+
 .AntesDepois {
     color: black;
-}
-.CardInfoIndiceContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 16px;
 }
 
 .TextoVerde {
@@ -85,22 +48,12 @@
     color: #cf6868;
 }
 
-.CardInfoFonte {
-    font-size: 14px;
-    margin-top: 5px;
-}
-
-.CardInfoStatusContainer {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-}
-
 .CardInfoStatus {
     display: flex;
     align-items: center;
     gap: 4px;
     flex-wrap: wrap;
+    word-wrap: normal;
     font-size: 14px;
     font-family: 'Inter';
     font-style: normal;
@@ -119,59 +72,62 @@
     .CardInfo {
         font-size: 14px;
     }
-
-    .CardInfoFonte {
-        font-size: 12px;
-    }
 }
 
 .ContainerCards {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(6, auto);
     height:fit-content;
-    /*row-gap: 1px;
-    /* grid-column: ; */
 }
+
 .PrimeiroCard {
     border-bottom: 1px solid #9494946b;
     height: 100%;
-    
 }
+
 /* border-radius starts at top-left, top-right, bottom-right, bottom left */
 .TerceiroCard { 
     border-top: 1px solid #9494946b;
     border-radius: 15px 0px 0px 0px;
     border-bottom: 1px solid #9494946b;
 }
+
 .QuartoCard {
     border-bottom: 1px solid #9494946b;
 }
+
 .QuintoCard {
     border-radius: 0px 0px 0px 15px;
     border-bottom : 1px solid #9494946b;
 }
+
 .SextoCard {
     border-top: 1px solid #9494946b;
 }
+
 .NonoCard {
     border-top: 1px solid #9494946b;
 }
+
 .DecimoSegundoCard {
     border-top: 1px solid #9494946b;
     border-radius: 0px 15px 0px 0px;
 }
+
 .DecimoQuartoCard {
     border-radius: 0px 0px 15px 0px;
 }
+
 /* Coluna 1 = coluna fantasma */
 .PrimeiraColuna {
-    /* grid-column: 1/3; */
-    grid-column:span 2; 
+    grid-column: span 2;
 
 }
+
 .AuxClassBorder {
     border-bottom: 1px solid #9494946b;
 }
+
 .SegundaColuna {
     grid-column: 3/4;
     border-left: 1px solid #9494946b;
@@ -195,6 +151,7 @@
     border-bottom: 1px solid #9494946b;
     border-right: 1px solid #9494946b;
 }
+
 .CardPeriodos {
     font-size: 14px;
     font-family: 'Inter';
@@ -203,9 +160,7 @@
     padding: 25px;
     height: 100%;
 }
-.TesteMensal {
-    border: 1px solid #9494946b;
-}
+
 .CardPeriodosDescricao {
     font-size: 14px;
     color: #9ba4a5;
