--- a/componentes/CardGridInternacoes/CardGridInternacoes.module.css
+++ b/componentes/CardGridInternacoes/CardGridInternacoes.module.css
@@ -1,111 +1,110 @@
 .CardInfo {
-    color: #9ba4a5;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 8px;
     width: 100%;
     height: 100%;
-    font-size: 16px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    padding: 25px 55px;
-}
-
-.CardInfoIndicadorContainer {
-    display: flex;
-    gap: 10px;
-    height: fit-content;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: flex-start;
+    padding: 20px 55px;
 }
 
 .CardInfoIndicador {
-    color: black;
+    color: #1F1F1F;
+    font-family: Inter;
     font-size: 28px;
     font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.CardInfoIndicadorDescricao,
-.CardInfoDescricao {
+.CardInfoIndicadorDescricao {
+    color: #9ba4a5;
+    font-family: Inter;
     font-size: 14px;
     font-weight: 400;
-}
-
-.AntesDepois {
-    color: black;
-}
-
-.TextoVerde {
-    color: #7ab37d;
-}
-
-.TextoVermelho {
-    color: #cf6868;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
 .CardInfoStatus {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.CardInfoStatusDescricao {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 4px;
-    flex-wrap: wrap;
-    word-wrap: normal;
-    font-size: 14px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    padding: 25px;
+}
+
+.CardInfoDescricao {
     color: #9ba4a5;
+    font-family: Inter;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: center;
 }
 
-.CardInfoStatusSymbol {
-    font-size: 20px;
-    font-weight: bold;
+.AntesDepois {
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 15px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #1F1F1F;
+    margin: 0;
 }
 
-/* MEDIUM */
-@media(max-width: 780px) {
-    .CardInfo {
-        font-size: 14px;
-    }
+.CardInternacaoStatus {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
 }
 
 .ContainerCards {
     display: grid;
-    grid-template-columns: repeat(6, auto);
+    grid-template-columns: repeat(5, auto);
     height:fit-content;
     margin: 20px;
     margin-bottom: 20px;
 }
 
 .PrimeiraColuna {
-    grid-column: span 2;
+    grid-column: 1/2;
     border-left: 1px solid #9494946b;
     border-top: 1px solid #9494946b;
 }
 
 .SegundaColuna {
-    grid-column: 3/4;
+    grid-column: 2/3;
     border-left: 1px solid #9494946b;
     border-top: 1px solid #9494946b;
 }
 
 .TerceiraColuna {
-    grid-column: 4/5;
+    grid-column: 3/4;
     border-left: 1px solid #9494946b;
     border-top: 1px solid #9494946b;
 }
 
 .QuartaColuna {
-    grid-column: 5/6;
+    grid-column: 4/5;
     border-left: 1px solid #9494946b;
     border-top: 1px solid #9494946b;
 }
 
 .QuintaColuna {
-    grid-column: 6/7;
+    grid-column: 5/6;
     border-left: 1px solid #9494946b;
     border-right: 1px solid #9494946b;
     border-top: 1px solid #9494946b;
@@ -139,7 +138,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
 }
 
 .CardPeriodosTitulo {
