--- a/componentes/CardGridInternacoes/CardGridInternacoes.module.css
+++ b/componentes/CardGridInternacoes/CardGridInternacoes.module.css
@@ -6,7 +6,7 @@
     gap: 8px;
     width: 100%;
     height: 100%;
-    padding: 20px 55px;
+    padding: 20px;
 }
 
 .CardInfoIndicador {
@@ -74,7 +74,7 @@
 
 .ContainerCards {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(5, 1fr);
     height:fit-content;
     margin: 20px 0;
     margin-bottom: 20px;
@@ -135,7 +135,7 @@
 .CardPeriodos {
     font-family: 'Inter';
     letter-spacing: 0em;
-    padding: 45px 25px;
+    padding: 45px 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
