--- a/componentes/ToggleList/ToggleList.module.css
+++ b/componentes/ToggleList/ToggleList.module.css
@@ -11,11 +11,11 @@
 }
 
 .ToggleListContainerColumn {
-  width: 100%;
-  flex-direction: column;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 40px;
   padding: 60px 30px;
+  align-items: flex-start; /* Alinha itens à esquerda em telas menores */
 }
 
 .Light {
@@ -64,7 +64,6 @@
   width: 100%;
 }
 
-
 @media(max-width: 1440px) {
   .ToggleListTitle {
     font-size: 24px;
@@ -100,4 +99,24 @@
     line-height: 130%;
     letter-spacing: -0.02em;
   }
+}
+
+/* Imagens Responsivas */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Unidades Relativas */
+.ToggleListTitle {
+  font-size: 2rem; /* 'rem' em vez de 'px' para tamanho de fonte */
+  line-height: 1.3;
+}
+
+/* Acessibilidade */
+.ToggleListTitle {
+  font-weight: 400;
+  font-size: 1.5rem; /* Um tamanho de fonte um pouco menor para melhor legibilidade */
+  line-height: 1.5;
+  color: #000; 
 }
