--- a/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
+++ b/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
@@ -33,7 +33,7 @@
     font-weight: 400;
     line-height: 150%; 
     letter-spacing: -0.16px;
-    color: #A6B5BE;
+    color: #2EB280;
     text-decoration: underline;
     width: fit-content;
 }
@@ -57,7 +57,7 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 150%;
-    width: 78%;
+    width: 52%;
 }
 .SearchBar:focus { 
     outline: none !important;
@@ -131,6 +131,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-right: 10px;
 }
 .ShowFiltros{
     font-family: 'Inter';
@@ -175,13 +176,44 @@
     background: #EFF5F9;
     border-radius: 10px;
     width: fit-content;
-    padding: 8px;
+    padding: 0 6px;
     margin-left: 15px;
 }
 
 .Filtro{
     display: flex;
     flex-direction: column;
-    padding: 10% 15%;
+    padding: 2% 15%;
     gap: 10px;
+}
+.AplicarFiltros{
+    position: fixed;
+    width : 100%;
+    padding: 15px;
+    bottom: 0;
+    background-color: #FFF;
+}
+.AplicarfiltrosCase{
+    width : 100%;
+    height: 90px;
+    padding: 15px;
+    background-color: #FFF;
+}
+
+@media screen and (max-width : 1023px) {
+    .ToolBar{
+        flex-direction: column;
+        align-items: center;
+    }
+    .SearchBar{
+        width: 80%;
+        height: 60px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width : 1365px) {
+    .SearchBar{
+        width: 40%;
+    }
 }
