--- a/componentes/CardTrilha/CardTrilha.module.css
+++ b/componentes/CardTrilha/CardTrilha.module.css
@@ -46,7 +46,8 @@
 }
 
 .BotoesCardTrilha{
-    display: none;
+    display: inline-flex;
+    gap: 15px;
 }
 .BotoesCardTrilhaMobile{
     display: none;
@@ -72,9 +73,7 @@
         width: 100%;
     }
     .BotoesCardTrilha{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
+        display: none;
     }   
     .BotoesCardTrilhaMobile{
         display: flex;
@@ -96,9 +95,7 @@
     }
     
     .BotoesCardTrilha{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
+        display: none;
     }   
     .BotoesCardTrilhaMobile{
         display: flex;
@@ -120,10 +117,7 @@
     }
     
     .BotoesCardTrilha{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        width: 100%;
+        display: none;
     }
     .BotoesCardTrilhaMobile{
         display: flex;
