--- a/componentes/CardTrilha/CardTrilha.module.css
+++ b/componentes/CardTrilha/CardTrilha.module.css
@@ -55,24 +55,8 @@
 
 
 
-/* XLARGE */
-@media screen and (min-width: 1920px) {
-    .CardTrilha{
-        width: 100%;
-    }
-    .BotoesCardTrilha{
-        display: none;
-    }   
-    .BotoesCardTrilhaMobile{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-
-    }
-}
-
-/* LARGE */
-@media screen and (min-width: 1440px) and (max-width: 1919px) {
+/* LARGO (1024px - 3244px) */
+@media screen and (min-width: 1025px) and (max-width: 3244px) {
     .CardTrilha{
         width: 100%;
     }
@@ -89,22 +73,10 @@
 
 /* REGULAR */
 @media screen and (min-width: 1024px)and (max-width: 1439px) {
-    .CardTrilha{
-        width: 100%;
-    }
-    .BotoesCardTrilha{
-        display: none;
-    }   
-    .BotoesCardTrilhaMobile{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-
-    }
 }
 
 /* MEDIUM */
-@media screen and (min-width: 580px )and (max-width: 1023px) {
+@media screen and (min-width: 580px )and (max-width: 1024px) {
     .CardTrilha{
         width: 100%;
     }
