--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -25,6 +25,23 @@
     text-decoration: none;
 }
 
+.ButtonColorContainer{
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
 .ColorSM, .WhiteSM {
     background-color: #5367C9;
     border: none;
@@ -99,6 +116,27 @@
     width: 100%;
     height: 64px;
     white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.ButtonColorLarge{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #2EB280;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 25px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: normal;
     display: flex;
     align-items: center;
     justify-content: center;
