--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -55,6 +55,26 @@
     text-decoration: none;
 }
 
+.ButtonLightContainer{
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background-color: #fff;
+    color: #1F1F1F;
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+
 .ButtonLightContainer:hover{
     border: 1px solid rgba(31, 31, 31, 1);
     background-color: #fff;
