--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -25,7 +25,7 @@
     text-decoration: none;
 }
 
-.ButtonColorContainer{
+.ButtonColorContainerLarge{
     color: #fff;
     border-radius: 100px;
     padding: 0px 30px;
