ajuste css botão light

--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -55,7 +55,7 @@
     text-decoration: none;
 }
 
-.ButtonLightContainer{
+.ButtonLightContainerLarge{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #fff;
     color: #1F1F1F;
