--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -123,6 +123,25 @@
     align-items: center;
     text-decoration: none;
 }
+.ButtonLightLargeDisabled {
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background: none;
+    color: rgba(96, 110, 120, 0.50);
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    width : 100%
+}
 
 .ButtonLightDisabled:hover {
     cursor: default;
