--- a/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
+++ b/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
@@ -204,6 +204,7 @@
     justify-content : right;
     padding-right : 75px;
     margin-top: 40px;
+    margin-bottom: 10px;
 }
 .Atualizacao{
     background-color:#EFF5F9;
