--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -42,7 +42,7 @@
   min-width: 100%;
   width: 100%;
   height: 63px;
-  padding: 0 6%;
+  padding: 0;
 
   font-family: "Inter";
   font-size: small;
@@ -186,9 +186,3 @@
   }
 }
 
-@media (min-width: 640px){
-  .PanelSelectorContainerPosition1{
-    position: relative;
-    left: 160px;
-  }
-}
